Fixed the 1/2 button(s) alignment with customButton

--- a/app/src/components/main/modal/modalLayout/modalFooter/modalFooter.scss
+++ b/app/src/components/main/modal/modalLayout/modalFooter/modalFooter.scss
@@ -40,14 +40,13 @@
   }
 }
 .buttons-block {
-  float: right;
+  &.has-custom-button {
+    justify-content: space-between;
+  }
   white-space: nowrap;
   display: flex;
-  justify-content: space-between;
-  align-content: flex-end;
-  flex-direction: row-reverse;
+  justify-content: flex-end;
 }
-
 .button-container {
   display: inline-block;
   height: 30px;
